tests/linearity-regression/accept/accept_17.pdx
module M17 = structure {
  let x = 17
  let y = 18
}
