tests/linearity-regression/reject/s0900_never_used_02.pdx
module M = structure {
  let unused_linear = 1
}
